--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
+    "@ant-design/icons-react-native": "^2.3.2",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-document-picker": "~10.0.3",
+    "expo-media-library": "~13.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -22,12 +24,12 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "expo-document-picker": "~10.0.3",
-    "expo-media-library": "~13.0.3"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "metro": "^0.64.0",
+    "metro-core": "^0.64.0"
   },
   "private": true
 }
